Fixed the overlapping of the menu

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -66,7 +66,7 @@ footer {
 .about-container {
   background: #76d1cb49;
   text-align: center;
-  padding: 30px 45px;
+  padding: 50px 45px;
 }
 
 .about-container p {
@@ -76,7 +76,7 @@ footer {
 
 .projects-container {
   text-align: center;
-  padding: 30px;
+  padding: 50px;
 }
 
 .project-description {
